--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Roadmap DevOps</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="sytles.css" />
 </head>
 <body>
   <header>
@@ -62,12 +62,19 @@
         <li><a href="https://kubernetes.io" target="_blank">Kubernetes.io</a></li>
       </ul>
     </section>
+
+    <section id="conteudo">
+      <h2>📝 Guia Completo (Markdown)</h2>
+      <noscript>Habilite JavaScript para visualizar o conteúdo do guia.</noscript>
+      <div id="markdown" class="markdown"></div>
+    </section>
   </main>
 
   <footer>
     <p>Feito com ❤️ por [Seu Nome ou GitHub]</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
