--- a/index.html
+++ b/index.html
@@ -7,72 +7,28 @@
   <link rel="stylesheet" href="sytles.css" />
 </head>
 <body>
-  <header>
-    <h1>📌 Roadmap DevOps</h1>
-    <nav>
-      <ul>
-        <li><a href="#intro">Introdução</a></li>
-        <li><a href="#tools">Ferramentas</a></li>
-        <li><a href="#roadmap">Roadmap</a></li>
-        <li><a href="#resources">Recursos</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="brand">
+      <h1>DevOps Roadmap 2025</h1>
+      <p>Guia completo e prático para sua jornada</p>
+    </div>
   </header>
 
-  <main>
-    <section id="intro">
-      <h2>🔍 Introdução</h2>
-      <p>Este material tem como objetivo apresentar um guia completo para quem deseja seguir a carreira de DevOps, incluindo ferramentas, práticas e conceitos fundamentais.</p>
-    </section>
+  <div class="layout">
+    <aside class="sidebar">
+      <h3>Índice</h3>
+      <nav id="toc"></nav>
+    </aside>
 
-    <section id="tools">
-      <h2>🛠️ Ferramentas Essenciais</h2>
-      <ul>
-        <li>Git & GitHub</li>
-        <li>Docker</li>
-        <li>Kubernetes</li>
-        <li>Jenkins / GitLab CI</li>
-        <li>Terraform</li>
-        <li>Ansible</li>
-        <li>Prometheus & Grafana</li>
-      </ul>
-    </section>
+    <main class="content">
+      <section id="conteudo">
+        <noscript>Habilite JavaScript para visualizar o conteúdo do guia.</noscript>
+        <div id="markdown" class="markdown"></div>
+      </section>
+    </main>
+  </div>
 
-    <section id="roadmap">
-      <h2>🗺️ Roadmap DevOps</h2>
-      <p>Você pode seguir esta ordem sugerida para se tornar um(a) engenheiro(a) DevOps:</p>
-      <ol>
-        <li>Fundamentos de Sistemas Operacionais e Redes</li>
-        <li>Versionamento de Código (Git)</li>
-        <li>Containers e Virtualização (Docker, Podman)</li>
-        <li>Orquestração (Kubernetes)</li>
-        <li>Integração e Deploy Contínuo (CI/CD)</li>
-        <li>Infraestrutura como Código (Terraform, Ansible)</li>
-        <li>Monitoramento e Logging</li>
-        <li>Cloud (AWS, Azure, GCP)</li>
-      </ol>
-    </section>
-
-    <section id="resources">
-      <h2>📚 Recursos Recomendados</h2>
-      <ul>
-        <li><a href="https://roadmap.sh/devops" target="_blank">Roadmap.sh</a></li>
-        <li><a href="https://dev.to" target="_blank">Dev.to</a></li>
-        <li><a href="https://github.com" target="_blank">GitHub</a></li>
-        <li><a href="https://kubernetes.io" target="_blank">Kubernetes.io</a></li>
-      </ul>
-    </section>
-
-    <section id="conteudo">
-      <h2>📝 Guia Completo (Markdown)</h2>
-      <noscript>Habilite JavaScript para visualizar o conteúdo do guia.</noscript>
-      <div id="markdown" class="markdown"></div>
-    </section>
-  </main>
-
-  <footer>
-    <p>Feito com ❤️ por [Seu Nome ou GitHub]</p>
-  </footer>
+  <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
