--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 
     <main class="content">
       <section id="conteudo">
-        <noscript>Habilite JavaScript para visualizar o conteúdo do guia.</noscript>
-        <div id="markdown" class="markdown"></div>
+        <iframe id="markdownFrame" src="_md_render.html" title="Guia DevOps" loading="lazy"></iframe>
       </section>
     </main>
   </div>
 
   <button id="backToTop" aria-label="Voltar ao topo">↑</button>
 
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
